--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Akash</title>
+    <title>Color-Picker</title>
     <link rel="stylesheet" href="./output/tailwind.css">
 </head>
 <style>
